# analysis-agent

./: .env.example  .gitignore  .mcp.json  DOCKER.md  README.md  README.mdgit  docker-compose.hub.yml  docker-compose.yml  info.md  main.py  pyproject.toml  start_servers.bat
.github/workflows/: docker-publish.yml
backend/: .dockerignore  Dockerfile  README.html  README.md  pyproject.toml
backend/quickdata/: __init__.py  api.py  config.py  mcp_server.py
backend/quickdata/agent/: __init__.py  base.py  gemini_agent.py  tools.py
backend/quickdata/engine/: __init__.py  analysis.py  charts.py  pdf.py  playbooks.py  quality.py  query.py  report.py  store.py
backend/tests/: test_engine.py  test_workflows.py
frontend/: .dockerignore  Dockerfile  next.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Chart.tsx  ChatPanel.tsx  Markdown.tsx  Nav.tsx
frontend/app/dev/: page.tsx
smart-dev/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
smart-dev/smart_dev/: __init__.py  api.py  languages.py  server_fastmcp.py
smart-dev/smart_dev/agent/: __init__.py  base.py  gemini_agent.py  tools.py
smart-dev/smart_dev/prompts/: __init__.py  architecture_analysis.py  code_review.py  debug_investigation.py  dev_setup.py  performance_audit.py  refactor_planning.py
smart-dev/smart_dev/tools/: __init__.py  analyze_codebase.py  check_dependencies.py  deploy_preview.py  generate_docs.py  rollback_changes.py  run_tests.py
smart-dev/smart_dev/utils/: __init__.py  cache.py  logging.py  path_utils.py  proc.py
smart-dev/test-data/sample_app/: app.py  helpers.js
smart-dev/tests/: test_tools.py
(+3 files in other folders)
