[project]
name = "quickdata"
version = "0.1.0"
description = "Arbitrary JSON/CSV data analysis, exposed as both an MCP server (tools + prompts) and a FastAPI HTTP API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "google-genai>=1.0.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
quickdata-mcp = "quickdata.mcp_server:main"
quickdata-api = "quickdata.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quickdata"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
